# rpi-gpio-api

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: check.yml  deploy.yml
api/: index.html
api/rpi-gpio-api/: openapi.yaml
api/rpi-gpio-api/components/examples/: InternalServerError.yaml  InvalidJSON.yaml  ResourceIsNotFound.yaml  ValueDoesNotFollowTheRule.yaml
api/rpi-gpio-api/components/schemas/: Device-200.yaml  Device.yaml  Error.yaml  GPIO-200.yaml  GPIO.yaml  InternalServerError-500.yaml  ResourceIsNotFound-404.yaml  Unauthorized-401.yaml  gpio_number.yaml
api/rpi-gpio-api/paths/: device.yaml  gpio-{number}.yaml  version.yaml
main/latest/: rpi-gpio-api.html
scripts/: rpi-gpio-api.service
src/: api.rs  main.rs
src/api/: device.rs  error.rs  gpio.rs  version.rs
v0.1.0/: rpi-gpio-api.yaml
